Fix the contrast on some dark-mode icons
This adds some overrides for the hamburger menu styles in dark-mode, as
well as some low-specificity rules for the `fa` icons. They need to be
low specificity in order to avoid overriding colors for icons that are
specifically colored, like the green and red checks and Xs in the status
bars.

Fixes #1720

--- a/static/themes/dark-theme.css
+++ b/static/themes/dark-theme.css
@@ -434,3 +434,20 @@ div.argmenuitem span.argdescription {
 a {
     color: #45bbe0 !important;
 }
+
+.fa, .fas {
+    color: white;
+}
+
+.close:hover {
+    color: white;
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-toggler {
+    color: rgba(255,255,255,.5);
+    border-color: rgba(255,255,255,.1);
+}
